Bug 403763 - Displayed name of an interface in a component diagram is not updated
Summary: Displayed name of an interface in a component diagram is not updated
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.27.1 (KDE Applications 18.12.1)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-30 12:12 UTC by Ralf Habacker
Modified: 2019-01-30 18:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.2 (KDE Applications 18.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-01-30 12:12:35 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add component diagram
3. add interface
4. open interface properties and change name
5. Press okay

OBSERVED RESULT
The displayed name in the diagram is not updated

EXPECTED RESULT
The displayed name should be updated

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  openSUSE Leap 42.3
KDE Version: 4.14
Qt Version: 4.8

ADDITIONAL INFORMATIONS
This bug is independent from the used Qt version
Comment 1 Ralf Habacker 2019-01-30 18:56:36 UTC
Git commit 96d20006958d6f337ab4cd34957b1e8e901997b2 by Ralf Habacker.
Committed on 30/01/2019 at 18:55.
Pushed by habacker into branch 'Applications/18.12'.

Add test file for component diagram elements and associations

A  +248  -0    models/diagrams/component/all-associations.xmi
A  +170  -0    models/diagrams/component/all-elements.xmi

https://commits.kde.org/umbrello/96d20006958d6f337ab4cd34957b1e8e901997b2
Comment 2 Ralf Habacker 2019-01-30 18:56:36 UTC
Git commit 0b46604faae48016f8dd7dcb34fdcb8c9857bd64 by Ralf Habacker.
Committed on 30/01/2019 at 17:28.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'Displayed name of an interface in a component diagram is not updated'
FIXED-IN:2.27.2 (KDE Applications 18.12.2)

M  +5    -1    umbrello/umlwidgets/floatingtextwidget.cpp

https://commits.kde.org/umbrello/0b46604faae48016f8dd7dcb34fdcb8c9857bd64