Fix 'Displayed name of an interface in a component diagram is not updated'

BUG:403763
FIXED-IN:2.27.2 (KDE Applications 18.12.2)